force-app/main/default/objects/cgcloud__Promotion_Hurdle_Expression__c/cgcloud__Promotion_Hurdle_Expression__c.object-meta.xml
<CustomObject>
    <description>New object that stores the information about an expression.</description>
    <label>Promotion Expression</label>
    <nameField>
        <label>Promotion Expression Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Expressions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>