force-app/main/default/objects/cgcloud__Promotion_Hurdle_Expression__c/fields/cgcloud__Allows_Classification__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Allows_Classification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allows Classification</label>
    <type>Checkbox</type>
</CustomField>