force-app/main/default/objects/cgcloud__Promotion_Hurdle_Expression__c/fields/cgcloud__Expression_Function__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Expression_Function__c</fullName>
    <description>Name of the function which is determined to call the value of the function.</description>
    <label>Expression Function</label>
    <length>80</length>
    <type>Text</type>
</CustomField>