force-app/main/default/objects/cgcloud__Promotion_Hurdle_Expression__c/fields/cgcloud__Expression_Result_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Expression_Result_Type__c</fullName>
    <description>Type of result of the expression.</description>
    <label>Expression Result Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Numeric</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>