force-app/main/default/objects/cgcloud__Promotion_Hurdle_Expression__c/fields/cgcloud__Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Field_Api_Name__c</fullName>
    <description>Optional parameter.</description>
    <inlineHelpText>Namespace must not be used.</inlineHelpText>
    <label>Field (Api Name)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>