force-app/main/default/objects/cgcloud__Promotion_Hurdle_Expression__c/fields/cgcloud__Job_Definition_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Job_Definition_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Definition Template</label>
    <referenceTo>cgcloud__Job_Definition_Template__c</referenceTo>
    <relationshipLabel>Promotion Expressions</relationshipLabel>
    <relationshipName>Promotion_Expressions</relationshipName>
    <type>Lookup</type>
</CustomField>