force-app/main/default/objects/cgcloud__Promotion_Hurdle_Expression__c/validationRules/cgcloud__Sales_Org_should_be_same_for_all_Lookups.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same_for_all_Lookups</fullName>
    <active>true</active>
    <errorConditionFormula>AND( cgcloud__Product__r.Id  &lt;&gt; null,  TEXT( cgcloud__Sales_Org__c )  &lt;&gt;   TEXT( cgcloud__Product__r.cgcloud__Product_Template__r.cgcloud__Sales_Org__c ) ) ||
AND( cgcloud__Job_Definition_Template__r.Id &lt;&gt; null,  TEXT(cgcloud__Sales_Org__c) &lt;&gt;  TEXT( cgcloud__Job_Definition_Template__r.cgcloud__Sales_Org__c ) )</errorConditionFormula>
    <errorMessage>The Product and the Job Definition Template must have the same Sales Org.</errorMessage>
</ValidationRule>