force-app/main/default/objects/cgcloud__Promotion_Hurdle_Expression__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <columns>cgcloud__Expression_Function__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>